# zephyr

./: '  .checkpatch.conf  .clang-format  .cmake-format  .cmake.dotconfig.checksum  .codechecker.yml  .codecov.yml  .config  .cursorindexingignore  .editorconfig  .env  .gitattributes  .gitignore  .gitlint  .gitmodules  .gitreview  .mailmap  .rstcheck.cfg  .ruff-excludes.toml  .ruff.toml  .shippable.yml  .uhu  .uncrustify.cfg  .vale.ini  .yamllint  10ccfa64-3c47-4734-907c-57f56a305382.dmp  BUG_88929_CODE_DIFF.txt  BUG_88929_FIX_EXPLANATION.md  CMakeLists.txt  CMakeStyle.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  COMPLETE_FIX_SUMMARY.txt  CONTRIBUTING.md  CONTRIBUTING.rst  Compilation_status.md  Dockerfile  FIX_PROOF_FOR_SCREENSHOT.txt  GIT_COMMANDS_FOR_PR.md  (+87 more)
arch/: CMakeLists.txt  Kconfig  Kconfig.v1  Kconfig.v2  Makefile  archs.yml  cmake_install.cmake
arch/arc/: CMakeLists.txt  Kbuild  Kconfig  Makefile  defconfig  defs.objs  fatal_error.c  prep_c.c  reset.S  vector_table.c
arch/arm/: CMakeLists.txt  Kbuild  Kconfig  Makefile  aarch32.cmake  aarch64.cmake  defconfig  defs.objs
arch/arm64/: CMakeLists.txt  Kconfig
arch/common/: CMakeLists.txt  Kconfig  Makefile  Makefile.gen_isr_tables  Makefile.kobjects  cmake_install.cmake  core_rodata.ld  core_text.ld  dynamic_isr.c  exception.c  fill_with_zeros.ld  gen_isr_tables.py  init.c  instr_mem.c  isr_tables.c  isr_tables.ld  isr_tables_shell.c  k_entry.ld  multilevel_irq.c  multilevel_irq_legacy.c  nocache.ld  pm.c  ramfunc.ld  rom_start_address.ld  rom_start_offset.ld  semihost.c  shared_irq.c  shared_irq.ld  stacktrace.c  sw_isr_common.c  text_section_offset.ld  timing.c  timing_info_bench.c  xip.c
arch/dspic/: CMakeLists.txt  Kconfig
arch/hexagon/: CMakeLists.txt  Kconfig
arch/microblaze/: CMakeLists.txt  Kconfig  Kconfig.features
arch/mips/: CMakeLists.txt  Kconfig
arch/nios2/: CMakeLists.txt  Kbuild  Kconfig  Makefile
arch/openrisc/: CMakeLists.txt  Kconfig
arch/posix/: CMakeLists.txt  Kconfig  Kconfig.natsim_optional  Kconfig.sysbuild  Linux.aarch64.cmake  aarch64.cmake  arm.cmake  natsim_optional.cmake  x86_64.cmake
arch/riscv/: CMakeLists.txt  Kconfig  Kconfig.core  Kconfig.isa
arch/riscv32/: CMakeLists.txt  Kbuild  Kconfig  Makefile
arch/rx/: CMakeLists.txt  Kconfig
arch/sparc/: CMakeLists.txt  Kconfig
arch/tricore/: CMakeLists.txt  Kconfig
arch/x86/: CMakeLists.txt  Kbuild  Kconfig  Makefile  Makefile.gdt  Makefile.idt  Makefile.mmu  cache.c  cache_s.S  cache_s.s  crt0.S  defconfig  defs.objs  driver_static_irq_stubs.S  driver_static_irq_stubs.s  fw_config.yaml  gen_gdt.py  gen_idt.py  gen_mmu.py  gen_mmu_x86.py  gen_static_shstk_array.py  ia32.cmake  intel64.cmake  sys_fatal_error_handler.c  timing.c  x64.cmake
arch/x86_64/: CMakeLists.txt  Kconfig
arch/xtensa/: CMakeLists.txt  Kbuild  Kconfig  Makefile
boards/: CMakeLists.txt  Kconfig  Kconfig.v1  Kconfig.v2  Kconfig.whisper  Makefile  boards.rst  cmake_install.cmake  deprecated.cmake  index.rst
boards/01space/: index.rst
boards/96b_nitrogen/: 96b_nitrogen_defconfig  Kconfig.defconfig
boards/96boards/: index.rst
boards/aconno/: index.rst
boards/acrn/: Kconfig.acrn  board.yml  index.rst
boards/actinius/: index.rst
boards/adi/: index.rst
boards/aesc/: index.rst
boards/aifoundry/: index.rst
boards/aithinker/: index.rst
boards/alientek/: index.rst
boards/alif/: index.rst
boards/altera_max10/: Kconfig.board  Kconfig.defconfig  altera_max10_defconfig
doc/: 404.rst  CMakeLists.txt  LICENSING.rst  Makefile  README.rst  about_zephyr.rst  api18970.md  board_catalog.yaml  cmake.rst  cmake_hack.sh  code_of_conduct_enforcement_manual.rst  code_of_conduct_reporting_guidelines.rst  conf.py  copyright.rst  disclaimers.rst  documentation_license.rst  doxygen.config  glossary.rst  index-tex.rst  index.html  index.rst  kconfig.rst  known-warnings.txt  not-included.rst  package-lock.json  package.json  reference.rst  release-notes-1.10.rst  release-notes-1.11.rst  release-notes-1.12.rst  release-notes-1.13.rst  release-notes-1.5.rst  release-notes-1.6.rst  release-notes-1.7.rst  release-notes-1.8.rst  release-notes-1.9.rst  release-notes.rst  requirements.in  requirements.txt  rfc-flash-partition-description.rst  (+9 more)
drivers/: CMakeLists.txt  Kconfig  Makefile  cmake_install.cmake  defs.objs
kernel/: CMakeLists.txt  Kconfig  Kconfig.device  Kconfig.event_logger  Kconfig.idle  Kconfig.init  Kconfig.irq  Kconfig.mem_domain  Kconfig.obj_core  Kconfig.platform  Kconfig.power_mgmt  Kconfig.sched_server  Kconfig.smp  Kconfig.vm  Makefile  aio_comparator.c  alarm.c  alert.c  atomic_c.c  banner.c  boot_args.c  bus.c  busy_wait.c  cache_handlers.c  can.c  cmake_install.cmake  compiler_stack_protect.c  condvar.c  counter.c  cpu.c  cpu_mask.c  deadline.c  defs.objs  device.c  device_notifications.c  dma.c  dynamic.c  dynamic_disabled.c  entropy.c  errno.c  (+88 more)
lib/: CMakeLists.txt  Kbuild  Kconfig  Makefile  cmake_install.cmake  fdtable.c  thread_entry.c  work_q.c
scripts/: .coveragerc  .gitignore  0001-armv7m-support-basepri-primask-interrupt-locking.patch  CMakeLists.txt  Kbuild.include  Makefile  Makefile.arc.preparch  Makefile.arm.preparch  Makefile.build  Makefile.gen  Makefile.host  Makefile.lib  Makefile.preparch  Makefile.qemu  Makefile.qemu_jailhouse  Makefile.toolchain.espressif  Makefile.toolchain.gccarmemb  Makefile.toolchain.iamcu  Makefile.toolchain.issm  Makefile.toolchain.riscv32  Makefile.toolchain.xcc  Makefile.toolchain.xtools  Makefile.toolchain.yocto  Makefile.toolchain.zephyr  Makefile.x86.preparch  Makefile.xt-run  Makefile.xtsc-run  add_all_sqlite.sh  add_binary_version_header.py  appmem_report.py  binary_version_header.py  bindings_properties_allowlist.yaml  board_yaml2h.py  build-docs.sh  build_apps_in_dir.sh  build_grub.sh  build_sqlite.py  cat3files  check_compliance.py  check_host_is_ok.py  (+123 more)
soc/: CMakeLists.txt  Kconfig  Kconfig.v1  Kconfig.v1.choice  Kconfig.v2
subsys/: CMakeLists.txt  Kconfig  Makefile  cmake_install.cmake  subsys.dtsi
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+129279 files in other folders)
